<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_connection_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_6_digit_code"
        android:inputType="number"
        android:maxLength="6" />

    <EditText
        android:id="@+id/et_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/host_hint"
        android:inputType="text"
        android:text="10.0.2.2" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/port_hint"
        android:inputType="number"
        android:text="5050" />

</LinearLayout>
